fixed overflowing error

--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -21,8 +21,9 @@
     background: transparent;
     border: 0;
     position: absolute;
-    right: -1rem;
-    top: 1.1rem
+    right: 0rem;
+    top: 1.4rem;
+    overflow: hidden;
 }
 
 .header a:hover {
@@ -32,8 +33,8 @@
 }
 
 .svg {
-    width: 2rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 .back-drop-wrapper {
@@ -54,6 +55,6 @@
 @media screen and (min-width: 500px) {
     .header a {
         right: 0rem;
-        top: 1.1rem
+        top: 1.4rem
     }
 }
